eclipseWorkspace/AK SFDC/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Assignment</fullName>
        <description>Use for assignments we&apos;ve won</description>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Accepting Candidates</fullName>
        </values>
        <values>
            <fullName>Akascia Disengaged</fullName>
        </values>
        <values>
            <fullName>Client Disengaged</fullName>
        </values>
        <values>
            <fullName>Company Wide Headcount Freeze</fullName>
        </values>
        <values>
            <fullName>Filled by Akascia</fullName>
        </values>
        <values>
            <fullName>Filled by Competitor</fullName>
        </values>
        <values>
            <fullName>Filled by InHouse Recruitment</fullName>
        </values>
        <values>
            <fullName>Filled by Internal Applicant</fullName>
        </values>
        <values>
            <fullName>Filled by Internal Referral</fullName>
        </values>
        <values>
            <fullName>Final Interview</fullName>
        </values>
        <values>
            <fullName>First Interviews</fullName>
        </values>
        <values>
            <fullName>Headcount Pulled</fullName>
        </values>
        <values>
            <fullName>Interviewing Non-Akascia Candidates</fullName>
        </values>
        <values>
            <fullName>Offered</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Pipeline Assignment</fullName>
        <description>Use for assignments we&apos;ve not yet won (Can be changed later)</description>
        <isActive>true</isActive>
        <values>
            <fullName>Headcount Pulled</fullName>
        </values>
        <values>
            <fullName>Lost to Competitor</fullName>
        </values>
        <values>
            <fullName>No External Firms</fullName>
        </values>
        <values>
            <fullName>No Retained</fullName>
        </values>
        <values>
            <fullName>Other Options First</fullName>
        </values>
        <values>
            <fullName>Proposal Sent</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Too Expensive</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Retainers</fullName>
        <description>Used only for the initial retainer stage</description>
        <isActive>true</isActive>
        <values>
            <fullName>Retainer Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Split Fee</fullName>
        <description>Used when we&apos;re engaged on split fees with other companies</description>
        <isActive>true</isActive>
        <values>
            <fullName>Filled by Partner Firm</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>BHIsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BHIsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BHJobID__c</fullName>
        <externalId>true</externalId>
        <label>BHJobID</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Based__c</fullName>
        <label>Based</label>
        <picklist>
            <picklistValues>
                <fullName>Office Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Preference</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Allowance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Car Allowance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Car__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Car</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_New__c</fullName>
        <label>Country (New)</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customers__c</fullName>
        <label>Customers</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1 ISP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other ISP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 1 Telco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Licensed Operators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast/Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile/Wireless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Integrator/VAR/Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datacentre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate/Large Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking/Finance/Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare/Medical/Pharmaceuticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial/Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure/Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil/Gas/Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fee_Arrangement__c</fullName>
        <label>Fee Arrangement</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fixed_Salary__c</fullName>
        <label>Fixed Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Healthcare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Healthcare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1 ISP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other ISP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 1 Telco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Licensed Operators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast/Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile/Wireless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Integrator/VAR/Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datacentre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking/Finance/Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Process Outsourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defence/Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial/Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure/Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Research</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Comments__c</fullName>
        <label>Invoice Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <label>Invoice Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Pension__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Placed_Candidate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Placed Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Placed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placed by?</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PlacedOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Position Code</label>
        <referenceTo>Position_Code__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>I&apos;m all over it!</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working it when I can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barely touching it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Probability_Display_Read_Only__c</fullName>
        <formula>Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Probability_of_Winning_Assignment__c</fullName>
        <label>Probability of Winning Assignment</label>
        <picklist>
            <picklistValues>
                <fullName>Hell Yes!</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meh...</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Chance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <label>Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Per Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Retainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Retainer</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Assignment</relationshipLabel>
        <relationshipName>RelatedAssignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retainer_Fee__c</fullName>
        <formula>Related_Retainer__r.Amount</formula>
        <label>Retainer Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salary_and_Benefits_Comments__c</fullName>
        <label>Salary and Benefits Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sanitized_Job_Description__c</fullName>
        <label>Sanitized Job Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <label>Service Level</label>
        <picklist>
            <picklistValues>
                <fullName>Contingency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retained</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsored_Visa__c</fullName>
        <label>Sponsored Visa?</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technology_Sector__c</fullName>
        <label>Technology Sector</label>
        <picklist>
            <picklistValues>
                <fullName>BSS &amp; CRM &amp; ERP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative &amp; Print &amp; Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMS &amp; OSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems &amp; Virtualization &amp; Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unapplicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video &amp; Audio &amp; Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice &amp; Telephony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless &amp; Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Time_to_Fill__c</fullName>
        <formula>Start_Date__c - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Fill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Fee__c</fullName>
        <label>Total Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Package__c</fullName>
        <formula>Fixed_Salary__c +  Variable_Salary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Package</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Requirements__c</fullName>
        <label>Travel Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About 25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About 50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Specified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Variable_Salary__c</fullName>
        <label>Variable Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Will_Relocate__c</fullName>
        <label>Will Relocate?</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes, Company Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes, Self-Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>bh_PlacementID__c</fullName>
        <externalId>true</externalId>
        <label>bh_PlacementID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Opportunities_Not_Retainers</fullName>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Service_Level__c</columns>
        <columns>Fee_Arrangement__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Permanent,Opportunity.Contract</value>
        </filters>
        <label>All Opportunities (Not Ret&apos;s or Pipelin)</label>
    </listViews>
    <listViews>
        <fullName>Assignments_Won_Current</fullName>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>Service_Level__c</columns>
        <columns>Fee_Arrangement__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Permanent,Opportunity.Contract</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Assignments Won - Current</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyCurrentOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>My Current Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Pipeline_Assignments_All</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Probability_of_Winning_Assignment__c</columns>
        <columns>OPPORTUNITY.CLOSED</columns>
        <columns>Service_Level__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Pipeline</value>
        </filters>
        <label>Pipeline Assignments - All</label>
    </listViews>
    <listViews>
        <fullName>Pipeline_Assignments_Current</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Probability_of_Winning_Assignment__c</columns>
        <columns>Service_Level__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Pipeline</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Pipeline Assignments - Current</label>
    </listViews>
    <listViews>
        <fullName>Placed</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Permanent,Opportunity.Contract</value>
        </filters>
        <label>Placed</label>
    </listViews>
    <listViews>
        <fullName>Retainers</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Agreed_Retainer</value>
        </filters>
        <label>Retainers</label>
    </listViews>
    <recordTypes>
        <fullName>Agreed_Retainer</fullName>
        <active>true</active>
        <businessProcess>Retainers</businessProcess>
        <description>Used only for retainer stages</description>
        <label>Agreed Retainer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract</fullName>
        <active>true</active>
        <businessProcess>Assignment</businessProcess>
        <description>Use for contracting / interim assignments we&apos;ve won.</description>
        <label>Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Permanent</fullName>
        <active>true</active>
        <businessProcess>Assignment</businessProcess>
        <description>Use for assignments we&apos;ve won.</description>
        <label>Permanent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pipeline</fullName>
        <active>true</active>
        <businessProcess>Pipeline Assignment</businessProcess>
        <description>Use for assignments we&apos;ve not yet won (Can be changed later).</description>
        <label>Pipeline</label>
    </recordTypes>
    <recordTypes>
        <fullName>Split_Partner_Fee</fullName>
        <active>true</active>
        <businessProcess>Split Fee</businessProcess>
        <description>Used for split fees with Partner firms</description>
        <label>Split / Partner Fee</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>PlacementInfoCandidate</fullName>
        <active>true</active>
        <errorConditionFormula>AND (OR(RecordType.Id = &quot;012b0000000TsJd&quot;, RecordType.Id = &quot;012b0000000TsJO&quot;),
ISPICKVAL(StageName, &quot;Filled by Akascia&quot;
),

ISBLANK(Placed_Candidate__c)
)</errorConditionFormula>
        <errorDisplayField>Placed_Candidate__c</errorDisplayField>
        <errorMessage>Please specify the placed candidate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PlacementInfoInvoiceStatus</fullName>
        <active>true</active>
        <errorConditionFormula>AND (OR(RecordType.Id = &quot;012b0000000TsJd&quot;, RecordType.Id = &quot;012b0000000TsJO&quot;),
ISPICKVAL(StageName, &quot;Filled by Akascia&quot;
),

ISPICKVAL(Invoice_Status__c, &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Invoice_Status__c</errorDisplayField>
        <errorMessage>Please specify the invoice status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PlacementInfoPlacedBy</fullName>
        <active>true</active>
        <errorConditionFormula>AND (OR(RecordType.Id = &quot;012b0000000TsJd&quot;, RecordType.Id = &quot;012b0000000TsJO&quot;),
ISPICKVAL(StageName, &quot;Filled by Akascia&quot;
),

ISBLANK(Placed_by__c)
)</errorConditionFormula>
        <errorDisplayField>Placed_by__c</errorDisplayField>
        <errorMessage>Please specify who placed the candidate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PlacementInfoStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND (OR(RecordType.Id = &quot;012b0000000TsJd&quot;, RecordType.Id = &quot;012b0000000TsJO&quot;),
ISPICKVAL(StageName, &quot;Filled by Akascia&quot;
),

ISBLANK(Start_Date__c)
)</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Please specify the start date of the candidate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RetainerInfo</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 RecordTypeId = &quot;012b0000000TsJO&quot;,
ISPICKVAL(Service_Level__c, &quot;Retained&quot;),
Related_Retainer__c = &quot;&quot;
)</errorConditionFormula>
        <errorDisplayField>Related_Retainer__c</errorDisplayField>
        <errorMessage>Please select which retainer relates to this opportunity.</errorMessage>
    </validationRules>
</CustomObject>